alignment issue

--- a/src/app/pages/template-builder/template-builder.component.scss
+++ b/src/app/pages/template-builder/template-builder.component.scss
@@ -55,7 +55,7 @@
 .desktop {
     /* Styles for desktop view */
     // margin-left: 3rem;
-    width: 1310px; //1200px;
+    width: 100%; //1200px;
     height: 100vh !important;
     background-color: #f2f2f2;
 }
